; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_luaY_parser.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_luaY_parser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.LexState = type { i32* }
%struct.FuncState = type { %struct.TYPE_3__* }

@TK_EOS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_3__* (i32*, i32*, i32*, i8*)* @luaY_parser to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_3__* @luaY_parser(i32* %0, i32* %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.LexState, align 8
  %10 = alloca %struct.FuncState, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = getelementptr inbounds %struct.LexState, %struct.LexState* %9, i32 0, i32 0
  store i32* %11, i32** %12, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @luaS_new(i32* %15, i8* %16)
  %18 = call i32 @luaX_setinput(i32* %13, %struct.LexState* %9, i32* %14, i32 %17)
  %19 = call i32 @open_func(%struct.LexState* %9, %struct.FuncState* %10)
  %20 = getelementptr inbounds %struct.FuncState, %struct.FuncState* %10, i32 0, i32 0
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 2, i32* %22, align 4
  %23 = call i32 @luaX_next(%struct.LexState* %9)
  %24 = call i32 @chunk(%struct.LexState* %9)
  %25 = load i32, i32* @TK_EOS, align 4
  %26 = call i32 @check(%struct.LexState* %9, i32 %25)
  %27 = call i32 @close_func(%struct.LexState* %9)
  %28 = getelementptr inbounds %struct.FuncState, %struct.FuncState* %10, i32 0, i32 0
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %28, align 8
  ret %struct.TYPE_3__* %29
}

declare dso_local i32 @luaX_setinput(i32*, %struct.LexState*, i32*, i32) #1

declare dso_local i32 @luaS_new(i32*, i8*) #1

declare dso_local i32 @open_func(%struct.LexState*, %struct.FuncState*) #1

declare dso_local i32 @luaX_next(%struct.LexState*) #1

declare dso_local i32 @chunk(%struct.LexState*) #1

declare dso_local i32 @check(%struct.LexState*, i32) #1

declare dso_local i32 @close_func(%struct.LexState*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
